fix https && rebuild the site

--- a/themes/yasimple/base.html
+++ b/themes/yasimple/base.html
@@ -10,16 +10,7 @@
     </head>
 
     <body>
-    <a href="https://github.com/Xuanwo/CLIWiki"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://7xk8bq.com1.z0.glb.clouddn.com/fork.png" alt="Fork me on GitHub" data-canonical-src="http://7xk8bq.com1.z0.glb.clouddn.com/forkme_right_gray_6d6d6d.png"></a>
-        <!--
-        <div id="nav">
-            <ul>
-                <li><a href="http://tankywoo.com"></a></li>
-                <li><a href="">Github</a></li>
-                <li><a href="">Simiki</a></li>
-            </ul>
-        </div>
-        -->
+    <a href="https://github.com/Xuanwo/CLIWiki"><img style="position: absolute; top: 0; right: 0; border: 0;" src="{{ site.root }}/static/images/fork.png" alt="Fork me on GitHub" data-canonical-src="{{ site.root }}/static/images/forkme_right_gray_6d6d6d.png"></a>
         <div id="container">
             {% block container %}
             {% endblock %}
