--- a/themes/yasimple/base.html
+++ b/themes/yasimple/base.html
@@ -12,10 +12,9 @@
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
           ga('create', 'UA-51515330-3', 'auto');
           ga('send', 'pageview');
-
+          ga('set', '&uid', {{USER_ID}});
         </script>
     </head>
 
