--- a/themes/yasimple/base.html
+++ b/themes/yasimple/base.html
@@ -26,7 +26,7 @@
         </div>
         <div id="footer">
             <span>
-                Copyright © 2015 {{ site.author }}.
+                Copyright © 2015-2016 {{ site.author }}.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
             </span>
         </div>
