--- a/themes/yasimple/base.html
+++ b/themes/yasimple/base.html
@@ -7,15 +7,13 @@
         <meta name="keywords" content="{{ site.keywords }}"/>
         <meta name="description" content="{{ site.description }}"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-51515330-3', 'auto');
-          ga('send', 'pageview');
-          ga('set', '&uid', {{USER_ID}});
-        </script>
+		<script type="text/rocketscript" id="hexo.configuration">
+			var CONFIG = {
+			analytics: {
+				google: 'UA-51515330-3'
+			}
+		};
+</script>
     </head>
 
     <body>
@@ -30,5 +28,6 @@
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
             </span>
         </div>
+		<script type="text/javascript" src="/js/analytics_google-analytics.js"></script>
     </body>
 </html>
