--- a/themes/yasimple/base.html
+++ b/themes/yasimple/base.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="{{ site.keywords }}"/>
         <meta name="description" content="{{ site.description }}"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<script type="text/rocketscript" id="hexo.configuration">
+		<script type="text/javascript">
 			var CONFIG = {
 			analytics: {
 				google: 'UA-51515330-3'
@@ -28,6 +28,6 @@
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
             </span>
         </div>
-		<script type="text/javascript" src="/js/analytics_google-analytics.js"></script>
+		<script type="text/javascript" src="/static/js/analytics_google-analytics.js"></script>
     </body>
 </html>
