update theme, add disqus

--- a/themes/yasimple/page.html
+++ b/themes/yasimple/page.html
@@ -18,6 +18,7 @@
     </div>
 {% endblock %}
 
+{% block disqus %}
 <div id="disqus_thread"></div>
 <script>
 /**
@@ -39,3 +40,4 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+{%% endblock %}
