--- a/themes/yasimple/base.html
+++ b/themes/yasimple/base.html
@@ -22,7 +22,9 @@
         <div id="container">
             {% block container %}
             {% endblock %}
-        </div>
+		</div>
+		{% block disqus %}
+		{% endblock %}
         <div id="footer">
             <span>
                 Copyright © 2015-2016 {{ site.author }}.
