--- a/themes/yasimple/page.html
+++ b/themes/yasimple/page.html
@@ -40,4 +40,4 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-{%% endblock %}
+{% endblock %}
