--- a/themes/yasimple/page.html
+++ b/themes/yasimple/page.html
@@ -26,7 +26,7 @@
 * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
 */
 var disqus_config = function () {
-	this.page.url = "{{ site.url }}/{{ site.root }}/{{ page.category }}/{{ page.title }}"; // Replace PAGE_URL with your page's canonical URL variable
+	this.page.url = "{{ site.url }}{{ site.root }}/{{ page.category }}/{{ page.title }}"; // Replace PAGE_URL with your page's canonical URL variable
 	this.page.identifier = "{{ page.title }}" ; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
