--- a/themes/yasimple_x2/base.html
+++ b/themes/yasimple_x2/base.html
@@ -17,6 +17,8 @@
     <div id="container" class="typo">
       {% block container %}
       {% endblock %}
+      {% block disqus %}
+			{% endblock %}
     </div>
     <div id="footer">
       <div class="footer-left">
